Fixade ett problem med att go to top knappen hade högre Z-index än navbaren

--- a/CSS/index/style.css
+++ b/CSS/index/style.css
@@ -10772,6 +10772,7 @@ textarea.form-control-lg {
 }
 
 nav.navbar {
+  z-index: 1;
   position: sticky;
   top: 0;
   background-color: #E6E6E6;
